# ComfyUI-ProportionChanger

./: .gitignore  README.md  README_ja.md  __init__.py  nodes.py  plan.md  pyproject.toml  requirements.txt  test_interpolation_standalone.py  utils.py
example_workflows/: .gitkeep  proportion_changer_SteadyDancer.json  proportion_changer_basic.json  proportion_changer_basic2.json  proportion_changer_interpolator.json  proportion_changer_params.json  proportion_changer_pose_data_to_pose_keypoint.json  proportion_changer_video.json  proportion_changer_video2.json  proportion_changer_wanvideo_fun_2_2.json
example_workflows/example_inputs/: mini_miku.json
proportion_changer/: __init__.py  converter_nodes.py  detector_nodes.py  interpolation_node.py  keypoint_denoiser_node.py  params_node.py  render_nodes.py  ultimate_detector_node.py
proportion_changer/keypoint_denoiser/: __init__.py  body_analysis.py  config.py  core_algorithm.py  kalman_filter.py
unianimate/: nodes.py
unianimate/dwpose/: util.py
utils/: __init__.py  dwpose_core.py  filters.py  pose_processing.py  rendering.py
web/js/: poseKeypointPreview.js
