[project]
name = "ComfyUI-ProportionChanger"
description = "Advanced DWPose-based body proportion manipulation and keypoint processing for ComfyUI"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["torch", "numpy", "opencv-python", "tqdm"]

[project.urls]
Repository = "https://github.com/grmchn/ComfyUI-ProportionChanger.git"
# Based on kijai/ComfyUI-WanVideoWrapper and toyxyz/ComfyUI-ultimate-openpose-editor

[tool.comfy]
PublisherId = "gearmachine"
DisplayName = "ComfyUI-ProportionChanger"
Icon = ""
